// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test ElementPanel in mobile should render MainType correctly 1`] = `
<body
  class="adm-overflow-hidden"
>
  <div
    class="adm-px-tester"
    style="--size: 10;"
  />
  <div
    class="adm-px-tester"
  />
  <div>
    <div
      class="adm-floating-panel adm-floating-panel-bottom panel panel"
      data-animating="true"
      style="height: 0px; transform: translateY(calc(100% + (0px)));"
    >
      <div
        class="adm-floating-panel-mask"
        style="display: none;"
      />
      <div
        class="adm-floating-panel-header"
      >
        <div
          class="adm-floating-panel-bar"
        />
      </div>
      <div
        class="adm-floating-panel-content"
      >
        <span
          class="anticon close-icon"
          role="img"
          tabindex="-1"
        >
          <svgr-url
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          />
        </span>
        <div
          class="title"
        >
          Elements
        </div>
        <div
          class="header hide-search"
        >
          <back-button />
          <search-bar />
          <main-type-selector />
        </div>
        <div
          class="scroll-content"
        >
          <main-content />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test ElementPanel in mobile should render Search correctly 1`] = `
<body
  class="adm-overflow-hidden"
>
  <div
    class="adm-px-tester"
    style="--size: 10;"
  />
  <div
    class="adm-px-tester"
  />
  <div>
    <div
      class="adm-floating-panel adm-floating-panel-bottom panel panel"
      data-animating="true"
      style="height: 0px; transform: translateY(calc(100% + (0px)));"
    >
      <div
        class="adm-floating-panel-mask"
        style="display: none;"
      />
      <div
        class="adm-floating-panel-header"
      >
        <div
          class="adm-floating-panel-bar"
        />
      </div>
      <div
        class="adm-floating-panel-content"
      >
        <span
          class="anticon close-icon"
          role="img"
          tabindex="-1"
        >
          <svgr-url
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          />
        </span>
        <div
          class="title"
        >
          Elements
        </div>
        <div
          class="header hide-select"
        >
          <back-button />
          <search-bar />
          <main-type-selector />
        </div>
        <div
          class="scroll-content"
        >
          <main-content />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test ElementPanel in mobile should render SubType correctly 1`] = `
<body
  class="adm-overflow-hidden"
>
  <div
    class="adm-px-tester"
    style="--size: 10;"
  />
  <div
    class="adm-px-tester"
  />
  <div>
    <div
      class="adm-floating-panel adm-floating-panel-bottom panel panel"
      data-animating="true"
      style="height: 0px; transform: translateY(calc(100% + (0px)));"
    >
      <div
        class="adm-floating-panel-mask"
        style="display: none;"
      />
      <div
        class="adm-floating-panel-header"
      >
        <div
          class="adm-floating-panel-bar"
        />
      </div>
      <div
        class="adm-floating-panel-content"
      >
        <span
          class="anticon close-icon"
          role="img"
          tabindex="-1"
        >
          <svgr-url
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          />
        </span>
        <div
          class="title"
        >
          Elements
        </div>
        <div
          class="header hide-search hide-select"
        >
          <back-button />
          <search-bar />
          <main-type-selector />
        </div>
        <div
          class="scroll-content"
        >
          <main-content />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test ElementPanel should render MainType correctly 1`] = `
<body>
  <div
    class="adm-px-tester"
    style="--size: 10;"
  />
  <div
    class="adm-px-tester"
  />
  <div>
    <div
      class="ant-drawer ant-drawer-left no-mask drawer css-dev-only-do-not-override-hash ant-drawer-open ant-drawer-inline"
      tabindex="-1"
    >
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 400px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content"
          role="dialog"
          style="background-color: transparent;"
        >
          <div
            class="ant-drawer-header drawer-header"
          >
            <div
              class="ant-drawer-header-title"
            >
              <div
                class="ant-drawer-title"
              >
                <div
                  class="header hide-search"
                >
                  <back-button />
                  <main-type-selector />
                  <search-bar />
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-drawer-body drawer-body"
            style="display: flex; flex-direction: column; height: 100%; overflow: hidden; padding: 0px;"
          >
            <div
              class="handle left"
            >
              <span
                aria-label="left"
                class="anticon anticon-left"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="left"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                  />
                </svg>
              </span>
            </div>
            <div
              style="position: relative; user-select: auto; width: 400px; height: 100%; max-width: 638px; min-width: 360px; box-sizing: border-box; flex-shrink: 0;"
            >
              <div
                class="resizable-drawer-content"
              >
                <main-content />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
  <div />
</body>
`;

exports[`test ElementPanel should render Search correctly 1`] = `
<body>
  <div
    class="adm-px-tester"
    style="--size: 10;"
  />
  <div
    class="adm-px-tester"
  />
  <div>
    <div
      class="ant-drawer ant-drawer-left no-mask drawer css-dev-only-do-not-override-hash ant-drawer-open ant-drawer-inline"
      tabindex="-1"
    >
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 400px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content"
          role="dialog"
          style="background-color: transparent;"
        >
          <div
            class="ant-drawer-header drawer-header"
          >
            <div
              class="ant-drawer-header-title"
            >
              <div
                class="ant-drawer-title"
              >
                <div
                  class="header"
                >
                  <back-button />
                  <main-type-selector />
                  <search-bar />
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-drawer-body drawer-body"
            style="display: flex; flex-direction: column; height: 100%; overflow: hidden; padding: 0px;"
          >
            <div
              class="handle left"
            >
              <span
                aria-label="left"
                class="anticon anticon-left"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="left"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                  />
                </svg>
              </span>
            </div>
            <div
              style="position: relative; user-select: auto; width: 400px; height: 100%; max-width: 638px; min-width: 360px; box-sizing: border-box; flex-shrink: 0;"
            >
              <div
                class="resizable-drawer-content"
              >
                <main-content />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
  <div />
</body>
`;
